gl51-master/src/test/deca/context/invalid/testObject_rule2_3.deca
//Decription
//Un nom de méthode redeclarer un nom de champ

class B {}
class A extends B {
    int x;
    void x() {} // x deja une variable, ne peut pas être une method
}
//releve bien une erreur
